<resources>
    <string name="app_name">SalaamUstadzApp</string>
    <string name="konsultasi_with_ustadz">Konsultasi Bersama Ustadz</string>
    <string name="logo">logo</string>
    <string name="sign_up_with_google">Masuk dengan Akun Google</string>
    <string name="sign_in">Masuk</string>
    <string name="support_by">Didukung oleh UIN Syarif Hidayatullah Jakarta</string>
    <string name="sign_up">Daftar</string>
    <string name="answer_problem">Menjawab semua permasalahan seputar\nkeagamaan bersama Ustadz terpercaya\nUIN Syarif Hidayatullah Jakarta</string>
    <string name="or_continue_with">atau lanjutkan dengan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Lupa Kata Sandi?</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="birthDate">Tanggal Lahir</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="no_hp">No. Telepon</string>
    <string name="number_phone">No. Telepon</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="term_condition">Membuat akun berarti Anda setuju dengan Persyaratan Layanan, Kebijakan Privasi, dan Pengaturan Notifikasi default kami.</string>
    <string name="term_condition_2">Dengan mengirim pertanyaan, Anda setuju dengan Syarat dan Ketentuan penggunaan aplikasi SalaamUstadz.</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="password_not_valid">Password minimal 8 karakter</string>
    <string name="name_not_valid">Nama kosong</string>
    <string name="password_not_pattern">Password terdiri dari angka dan huruf</string>
    <string name="password_not_same">Password tidak sama</string>
    <string name="error_terms">Setujui syarat ketentuan dan kebijakan privasi</string>
    <string name="err_no_net">Tidak ada konekasi internet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kirim">Kirim</string>
    <string name="text_input_email">Masukkan email Anda yang terdaftar pada aplikasi.</string>
    <string name="change_password">Atur Ulang Kata Sandi</string>
    <string name="text_send_instruction">Kami telah mengirimkan instruksi pemulihan kata sandi melalui email Anda.</string>
    <string name="back">Kembali</string>
    <string name="not_have_a_email">Tidak menerima email? Periksa filter spam Anda atau coba alamat email lain.</string>
    <string name="verify_email">Verifikasi Email</string>
    <string name="setting_account">Pengaturan Akun</string>
    <string name="my_activity">Aktivitas Saya</string>
    <string name="my_app">Aplikasi SalaamUstadz</string>
    <string name="exit">Keluar</string>
    <string name="app_version">Ver 1.0</string>
    <string name="article">Artikel</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="profile">Profil</string>
    <string name="send">Kirim</string>
    <string name="hide_identity">Sembunyikan identitas Saya dalam pertanyaan ini.</string>
    <string name="sentence_question">Assalamualaikum, ustadz. Saya ingin bertanya</string>
    <string name="write_question">Tulis Rincian Pertanyaan</string>
    <string name="write_title">Tulis Judul Pertanyaan</string>
    <string name="or_continue_with_sign_in_up">atau masuk/daftar dengan</string>
    <string name="with_google">Akun Google</string>
    <string name="nothing_message">Belum ada pesan</string>
    <string name="call_ustadz">Hubungi Ustadz yang kamu inginkan sekarang!</string>
    <string name="option_1">Salin</string>
    <string name="unduh">Unduh</string>
    <string name="hold_for_record">Tahan untuk merekam</string>
    <string name="record_audio">Mulai rekam</string>
    <string name="this_message_hbeen_deleted">Pesan ini dihapus untuk Anda</string>
    <string name="this_message_hbeen_deleted_for_me">Pesan dihapus untuk Anda</string>
    <string name="end_chat">Akhiri Konsultasi</string>
    <string name="confirmation_delete_message">Pesan hanya akan dihapus dari perangkat Anda. Yakin untuk menghapus pesan?</string>
    <string name="privacy_message">Profil Anda tidak akan ditampilkan pada saat berkonsultasi dengan ustadz/ustadzah.</string>
    <string name="label_error">Error</string>
    <string name="action_retry">Coba Lagi</string>
    <string name="label_you">Anda</string>
    <string name="label_photo">Foto</string>
    <string name="label_voice_message">Pesan Suara</string>
    <string name="label_man">Laki-Laki</string>
    <string name="label_woman">Perempuan</string>
    <string name="label_gender">Jenis Kelamin</string>
    <string name="label_tuntunan_ibadah">Tuntunan Ibadah</string>
    <string name="label_for_daily">Untuk Keseharian Anda</string>
    <string name="prayer_schedule">Jadwal Sholat</string>
    <string name="label_body_prayer">Seseorang tidak boleh meninggalkan shalat dalam keadaaan apapun.</string>
    <string name="label_quran">Al-Quran</string>
    <string name="label_body_quran">Seseorang yang rutin membaca al-Quran akan mendapatkan pahala yang berlipat ganda.</string>
    <string name="label_dzikr">Dzikir</string>
    <string name="label_body_dzikr">Dengan berdzikir pagi dan petang, hamba- Nya langsung dijanjikan surga oleh Allah.</string>
    <string name="label_daily_prayer">Doa Harian</string>
    <string name="label_body_daily_prayer">Kumpulan doa-doa harian menemani keseharianmu.</string>
    <string name="label_zakat">Zakat, Infaq, Shodaqoh</string>
    <string name="label_body_zakat">Menunaikan Zakat, Infaq dan Sedekah tanpa bingung dan ragu.</string>
    <string name="my_profile">Profil Saya</string>
    <string name="add_user">Tambah User</string>
    <string name="label_setting_notif">Pengaturan Notifikasi</string>
    <string name="label_about_us">Tentang Kami</string>
    <string name="label_help">Bantuan</string>
    <string name="label_rate">Suka SalaamUstadz? Nilai Kami</string>
    <string name="label_call_us">Hubungi Kami</string>
    <string name="label_my_rating">Penilaian</string>
    <string name="label_title">Title</string>
    <string name="label_subtitle">Subtitle</string>
    <string name="label_profile_info">Info Publik Profil</string>
    <string name="label_private_info">Info Pribadi</string>
    <string name="label_edit_profile">Ubah Profile</string>
    <string name="label_name">Nama</string>
    <string name="label_save">Simpan</string>
    <string name="label_knowledge_field">Bidang Keilmuan</string>
    <string name="label_birth_place">Tempat Lahir</string>
    <string name="label_edu_history">Riwayat Pendidikan</string>
    <string name="label_lecturer">Dosen</string>
    <string name="label_papers">Karya Tulis</string>
    <string name="label_phone_number">Nomor Telepon</string>
    <string name="label_change_bg">Ganti Background</string>
    <string name="label_search_surah">Cari Surah</string>
    <string name="label_surah">Surah</string>
    <string name="label_artikel_keislaman">Artikel Keislaman</string>
    <string name="label_qiblat">Qiblat</string>
    <string name="label_location">Lokasi</string>
    <string name="label_date">Tanggal</string>
    <string name="label_time">11:59</string>
    <string name="label_sound">Off</string>
    <string name="label_zero_degree">0°</string>
    <string name="label_dzikir">Dzikir</string>
    <string name="label_dzikir_pagi">Dzikir Pagi</string>
    <string name="label_information_dzikir_pagi">Waktunya antara Shubuh hingga terbit matahari</string>
    <string name="label_dzikir_petang">Dzikir Petang</string>
    <string name="label_information_dzikir_petang">Waktunya antara ‘Ashar hingga terbenam matahari</string>
    <string name="label_faedah_dzikir">“Hai orang–orang yang beriman, berdzikirlah (dengan menyebut Nama) Allah dzikir yang sebanyak–banyaknya. Dan bertasbihlah kepada–Nya di waktu pagi dan petang.” [Al–Ahzab/33: 41–42]</string>
    <string name="one">1</string>
    <string name="three_times">Dibaca 3x</string>
    <string name="label_search_doa">Cari Doa</string>
    <string name="label_bismillah">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِِ</string>
    <string name="label_taawuz">أَعُوْذُ بِاللّٰهِ مِنَ الشَّيْطَانِ الرَّجِيْمِ</string>
    <string name="label_arti_bismillah">Dengan menyebut nama Allah Yang Maha Pengasih lagi Maha Penyayang</string>
    <string name="label_artinya">Artinya:</string>
    <string name="header_stf">Lembaga Social Trust Fund (STF) Universitas Islam Negeri Syarif Hidayatullah Jakarta</string>
    <string name="label_info_lembaga">Info Lembaga</string>
    <string name="info_lembaga">STF UIN Syarif Hidayatullah Jakarta adalah lembaga non-struktural UIN Syarif Hidayatullah Jakarta. Berdiri sebagai lembaga sosial dan kemanusiaan sejak tahun 2012 yang bekerja atas dasar non-profit, transparan dan akuntabel. Empat pilar program yang menjadi fokus STF adalah; Charity (Amal), Advocacy (Advokasi), Research (Riset), dan Endowment (Wakaf).</string>
    <string name="label_website_stf_uin_jkt">Zakat dan Infak Disini</string>
    <string name="label_info_stf">Pelajari Lebih Lanjut</string>
    <string name="label_web_stf">STF UIN Jakarta</string>
    <string name="label_documentation">Dokumentasi</string>
    <string name="label_reminder_is_on">Pengingat aktif %s menit sebelum waktu tiba.</string>
    <string name="label_reminder_is_off">Pengingat tidak aktif.</string>
    <string name="label_is_on">ON</string>
    <string name="label_is_off">OFF</string>
    <string name="label_dash">-</string>
    <string name="label_notification">Notifikasi</string>
    <string name="label_setting_notification">Pengaturan Notifikasi</string>
    <string name="label_tap_to_setting">Ketuk untuk ubah</string>
    <string name="label_my_notification">Notifikasi Saya</string>
    <string name="label_setting">Pengaturan</string>
    <string name="label_before_time">Pengingat Sebelum Waktu Tiba</string>
    <string name="label_change_password">Ubah Kata Sandi</string>
    <string name="label_confirm_new_password">Konfirmasi Kata Sandi Baru</string>
    <string name="label_sentence_about_us">Salaam Ustadz adalah sebuah inovatif layanan aplikasi konsultasi keagamaan yang dikembangkan oleh UIN Syarif Hidayatullah Jakarta. Dengan didukung oleh keahlian dan keilmuan dari para ustadz dan cendekiawan agama terkemuka di universitas ini, aplikasi ini bertujuan untuk memberikan bimbingan spiritual dan jawaban atas pertanyaan keagamaan secara mudah, cepat, dan akurat. Kami berkomitmen untuk menyediakan platform yang aman dan terpercaya bagi pengguna untuk berdialog tentang berbagai aspek kehidupan keagamaan mereka. \n\n Melalui Salaam Ustadz, pengguna dapat dengan nyaman mengajukan pertanyaan, mendapatkan nasehat keagamaan, serta mengeksplorasi pemahaman agama Islam secara lebih mendalam. Kami percaya bahwa melalui teknologi, kami dapat memfasilitasi konektivitas antara para pencari ilmu dan ahli agama, serta memberikan kontribusi positif dalam memperkuat landasan spiritual masyarakat. Salaam Ustadz, menjadi panduan kehidupan keagamaan Anda.</string>
    <string name="label_role">Role</string>
    <string name="label_ustadz">Ustadz</string>
    <string name="label_ustadzah">Ustadzah</string>
    <string name="label_separated_with_comma">Pisahkan dengan koma</string>
    <string name="label_copy">Salin</string>
    <string name="label_example_email">test@gmail.com</string>
    <string name="label_example_password">XqAlk123</string>
    <string name="label_next">Lanjut</string>
    <string name="label_last_step">Langkah Terakhir</string>
    <string name="label_text_last_step">Dengan menyelesaikan langkah terakhir ini, proses pendaftaran telah berhasil dan Anda sekarang telah terdaftar.</string>
    <string name="label_send">Kirim</string>
    <string name="label_skip">Lewati</string>
</resources>