<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterGenderActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/CustomToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/label_last_step" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/label_gender"
        android:textColor="@color/color_text_blue_900"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_man"
            android:textColor="@color/black"
            app:buttonTint="@color/radio_state_colors" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_woman"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_8sdp"
            app:buttonTint="@color/radio_state_colors" />

        <!-- Add more RadioButtons for other genders if necessary -->
    </RadioGroup>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:importantForAccessibility="no"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/_2sdp"
            android:src="@drawable/ic_information" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_gravity="center"
            android:fontFamily="@font/avenir_lt_std_65_medium"
            android:text="@string/label_text_last_step"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_10ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/label_send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:backgroundTint="@color/dark_blue_primary"
        app:cornerRadius="@dimen/_8sdp" />
</androidx.appcompat.widget.LinearLayoutCompat>