<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/soft_yellow_green"
    tools:context=".ui.auth.AuthFragment">

    <ImageView
        android:id="@+id/imageWelcome"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_120sdp"
        android:contentDescription="@string/logo"
        android:paddingStart="@dimen/_60sdp"
        android:src="@drawable/logo_salamustadz_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/konsultasi_with_ustadz"
        android:textColor="@color/dark_blue_primary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/imageWelcome"
        app:layout_constraintTop_toBottomOf="@+id/imageWelcome" />
    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avernir_light"
        android:text="@string/answer_problem"
        android:textAlignment="viewEnd"
        android:textColor="@color/color_text_green_500"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@color/dark_blue_primary"
        app:cornerRadius="@dimen/_8sdp"
        app:elevation="@dimen/_4sdp"
        app:iconGravity="textStart"
        app:iconTintMode="multiply"
        app:layout_constraintTop_toBottomOf="@+id/textSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue_primary"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@color/gray_900"
        app:cornerRadius="@dimen/_8sdp"
        app:elevation="@dimen/_4sdp"
        app:iconGravity="textStart"
        app:iconTintMode="multiply"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn"
        tools:layout_editor_absoluteX="26dp" />

    <LinearLayout
        android:id="@+id/line_view"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/avernir_light"
            android:textStyle="bold"
            android:text="@string/or_continue_with_sign_in_up"
            android:textColor="@color/color_text_blue_900"
            android:textSize="@dimen/_11ssp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/white" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up_with_google"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/with_google"
        android:textAllCaps="false"
        android:textColor="@color/color_text_blue_900"
        android:textSize="@dimen/_11ssp"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_8sdp"
        app:elevation="@dimen/_4sdp"
        app:icon="@drawable/ic_google_logo"
        app:iconGravity="textStart"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_view" />


</androidx.constraintlayout.widget.ConstraintLayout>