<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/soft_yellow_green"
    tools:context=".ui.auth.EmailSendSuccessFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/success_send_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/verify_email"
        android:textColor="@color/dark_blue_primary"
        android:textSize="@dimen/_22ssp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/text_send_instruction"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/back"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_50sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:backgroundTint="@color/dark_blue_primary"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="26dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/not_have_a_email"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>