<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/soft_yellow_green"
    tools:context=".ui.auth.ForgotPasswordFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/_225sdp"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/forgot_password_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/forgot_your_password"
                android:textColor="@color/dark_blue_primary"
                android:textSize="@dimen/_22ssp"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/text_input_email"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/background_input"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/color_text_blue_900"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_35sdp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSendEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/kirim"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:backgroundTint="@color/dark_blue_primary"
                app:cornerRadius="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_80sdp"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>